syntax = "proto3";

option java_package = "ee.ut.cs.alarm.data.proto";
option java_multiple_files = true;

enum AlarmTrack {
  ALARM_TRACK_1 = 0;
  ALARM_TRACK_2 = 1;
  ALARM_TRACK_3 = 2;
  ALARM_TRACK_4 = 3;
  ALARM_TRACK_5 = 4;
  ALARM_TRACK_6 = 5;
  ALARM_TRACK_7 = 6;
  ALARM_TRACK_8 = 7;
  ALARM_TRACK_9 = 8;
  ALARM_TRACK_10 = 9;
  ALARM_TRACK_11 = 10;
}

enum AlarmGame {
  ALARM_GAME_BALANCE_HOLE = 0;
  ALARM_GAME_GO_INTO_THE_LIGHT = 1;
  ALARM_GAME_JUMPING_JACKS = 2;
  ALARM_GAME_COLOR_POINT = 3;
}

message UserPrefs {
  string id = 1;
  repeated AlarmTrack allowedTracks = 2;
  repeated AlarmGame allowedGames = 3;

  // Streak metadata
  // If count is set to -1, then streak feature is not enabled
  int32 streakCount = 4;
  int32 prevStreakCount = 5;
  uint64 lastMinigameTs = 6;
}